--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -3131,6 +3131,7 @@ footer a:hover {
 	-moz-animation: glowing 1300ms infinite;
 	-o-animation: glowing 1300ms infinite;
 	animation: glowing 1300ms infinite;
+	z-index: 100;;
   }
   @-webkit-keyframes glowing {
 	0% {
@@ -3222,3 +3223,44 @@ span .form-submit{
 	justify-content:center;
 	width:100%
 	}
+/**********************************/
+.title-slide{
+    font-size: 90px !important;
+}
+.sub-title{
+    font-size:35px !important
+}
+/**********************************/
+
+.world_images .swiper-container {
+	width: 100%;
+	height: 100%;
+  }
+
+  .world_images  .swiper-slide1 {
+	text-align: center;
+	font-size: 18px;
+	background: #fff;
+
+	/* Center slide text vertically */
+	display: -webkit-box;
+	display: -ms-flexbox;
+	display: -webkit-flex;
+	display: flex;
+	-webkit-box-pack: center;
+	-ms-flex-pack: center;
+	-webkit-justify-content: center;
+	justify-content: center;
+	-webkit-box-align: center;
+	-ms-flex-align: center;
+	-webkit-align-items: center;
+	align-items: center;
+  }
+
+  .world_images .swiper-slide1 img {
+	display: block;
+	max-width:440px;
+height: 100%;
+	
+	object-fit: cover;
+  }
