--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -50,7 +50,13 @@
 
 
 
-
+:root{
+	--main-color:#e36e28;
+	--title-color:#fff;
+	--bold-color:#000000;
+	
+	
+}
 html {
 		overflow-y: scroll;
 		-webkit-text-size-adjust: 100%;
@@ -537,7 +543,8 @@ ul.flat-infomation li i {
 }
 
 .header .logo {		
-	/* margin: 26px 0 0 0;	 */
+	
+	max-width: 100px;
 }
 
 /* Header Fix */
@@ -3424,10 +3431,14 @@ form{
 
 .submit-btn{
     padding: 10px 50px;
+	font-family: 'Poppins', sans-serif;
+
 }
 
 .submit-btn:hover{
     background:blue;
+	font-family: 'Poppins', sans-serif;
+
 }
 
 .form-container .form-row{
@@ -3447,6 +3458,47 @@ form{
     border-bottom: none;
 	height: auto;
 }
+.work_wrapper{
+	padding: 25px 20px;
+    margin: 25px 0;
+	/* background: #e2eee0; */
+	box-shadow: 0px 0px 14px rgba(0,0,0,.2);
+	border-radius: 8px;
+
+}
+.work_wrapper h5{
+	text-align: center;
+	font-family: 'Poppins', sans-serif;
+
+}
+.work_wrapper button{
+	padding: 10px 18px;
+	font-family: 'Poppins', sans-serif;
+}
+#id_work_days input[type="checkbox"] {
+	display: none;
+  }
+  #id_work_days span{
+	  font-family: 'Poppins', sans-serif;
+
+  }
+  #id_work_days span {
+	display: inline-block;
+	padding: 15px 28px;
+     font-size: 16px;
+	border: 2px solid #ea7a27;
+	border-radius: 3px;
+	color: black;
+  }
+  
+  #id_work_days input[type="checkbox"]:checked + span {
+	background-color: #ea7a27;
+	color: black;
+  }
+  #id_work_days label:hover{
+	  background-color: #ea7a27;
+	  transition: all 0.6s;
+  }
 
 
 /* *********************  Rating start  ************************ */
@@ -3539,3 +3591,301 @@ form{
   .rating-table{
 	font-family: 'Poppins', sans-serif;
   }
+  .tracker p{
+	font-family: 'Poppins', sans-serif;
+	font-weight: 600;
+	color: #000;
+  }
+  .tracker .checked {
+	color: orange;
+  }
+  /* Hide all steps by default: */
+.tab {
+	display: none;
+  }
+  /* ****************************   Header slider  ********************************** */
+
+
+.header-slider{
+    width: 100%;
+    height:400px;
+    position: relative;
+    overflow: hidden;
+}
+
+
+.header-slider .banner1,
+.header-slider .banner2,
+.header-slider .banner3,
+.header-slider .banner4{
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    left:0;
+    top:0;
+}
+
+.header-slider img{
+    width: 120%;
+	/* object-fit: cover; */
+    position: absolute;
+    left:50%;
+    top:50%;
+    transform:translate(-50%,-50%);
+    animation: zoom-out 3s linear infinite;
+}
+/* 
+.header-slider .banner-content{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 10;
+    position: relative;
+}
+
+.header-slider .banner-content:after{
+    content:'';
+    position: absolute;
+    top:0;
+    left:0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(rgba(0,0,0,.3),rgba(0,0,0,.6));
+    z-index: 11;
+}
+
+.header-slider .banner-content>h1{
+    position: relative;
+    z-index: 12;
+    font-size: 45px;
+    color: var(--title-color);
+}
+
+.header-slider .banner-content>h1 span{
+    color: var(--main-color);
+} */
+
+
+@keyframes zoom-out{
+    100%{
+        width: 100%;
+    }
+}
+
+.header-slider .banner1{
+    animation: slide1 12s linear infinite;
+}
+.header-slider .banner2{
+    animation: slide2 12s linear infinite;
+}
+.header-slider .banner3{
+    animation: slide3 12s linear infinite;
+}
+.header-slider .banner4{
+    animation: slide4 12s linear infinite;
+}
+
+
+@keyframes slide1{
+    0%{
+        visibility: visible;
+    }
+    25%{
+        visibility: hidden;
+    }
+    50%{
+        visibility: hidden;
+    }
+    75%{
+        visibility: hidden;
+    }
+    100%{
+        visibility: visible;
+    }
+}   
+
+@keyframes slide2{
+    0%{
+        visibility: hidden;
+    }
+    25%{
+        visibility: hidden;
+    }
+    50%{
+        visibility: visible;
+    }
+    75%{
+        visibility: hidden;
+    }
+    100%{
+        visibility: hidden;
+    }
+} 
+
+@keyframes slide3{
+    0%{
+        visibility: hidden;
+    }
+    25%{
+        visibility: hidden;
+    }
+    50%{
+        visibility: hidden;
+    }
+    75%{
+        visibility: visible;
+        z-index: 999;
+    }
+    100%{
+        visibility: hidden;
+    }
+} 
+
+@keyframes slide4{
+    0%{
+        visibility: hidden;
+    }
+    25%{
+        visibility: hidden;
+    }
+    50%{
+        visibility: hidden;
+    }
+    75%{
+        visibility: hidden;
+    }
+    100%{
+        visibility: visible;
+        z-index: 1000;
+    }
+} 
+
+
+
+@media (max-width:900px){
+
+    .header-slider{
+        height: 600px;
+    }
+
+    .header-slider .banner1,
+    .header-slider .banner2,
+    .header-slider .banner3,
+    .header-slider .banner4{
+        width: 100%;
+        height: 600px;
+    }
+
+    .header-slider img{
+        width: 150%;
+    }
+
+}
+
+
+@media (max-width:700px){
+
+    .header-slider img{
+        width: 200%;
+    }
+
+    .header-slider .banner-content>h1{
+        max-width: 300px;
+        text-align: center;
+        font-size:30px;
+    }
+
+    
+    @keyframes zoom-out{
+        100%{
+            width: 150%;
+        }
+    }
+
+}
+
+
+@media (max-width:600px){
+
+    .header-slider{
+        height:500px;
+    }
+
+    .header-slider .banner1,
+    .header-slider .banner2,
+    .header-slider .banner3,
+    .header-slider .banner4{
+        width: 100%;
+        height: 500px;
+    }
+    
+    @keyframes zoom-out{
+        100%{
+            width: 160%;
+        }
+    }
+
+}
+
+
+
+
+
+
+  /* ******************************  Section 1 start  ******************************* */
+
+    
+  [data-tab-content]{
+	display: none;
+}
+
+.active[data-tab-content]{
+	display: block;
+}
+
+.tab-section{
+    padding: 20px 0;
+}
+
+.tabs{
+	margin: 0!important;
+	margin-top: 50px!important;
+	list-style: none;
+	/* background: whitesmoke; */
+	padding:10px;
+    display: flex;
+    flex-direction: column;
+}
+
+.tab{
+	margin: 3px 0;
+	display: inline-block;
+	padding: 15px 10px;
+	cursor: pointer;
+	color: var(--bold-color);
+	background:whitesmoke;
+	font-weight: 600;
+	font-size: 15px;
+	font-family: "Poppins", sans-serif;
+	position: relative;
+}
+
+.tab.active{
+  background: var(--main-color);
+  color: white;
+}
+
+.tab:hover{
+	background: var(--main-color);
+  color: white;
+}
+
+.tab-content{
+	margin-top: 50px;
+	padding: 50px;
+	background: #FCFCFC;
+}
+
+/* ****  Section 1 end  ***** */
