--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -16,6 +16,7 @@
 @import url("shortcodes.css");
 @import url("../../../css.css");
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@700&display=swap');
 
 /**
   *	Reset
@@ -249,7 +250,7 @@ input[type="submit"] {
     /* padding: 15px 45px; */
     -webkit-border-radius: 20px;
 	        border-radius: 20px;
-    background-color: #e8280b;
+    background-color: #e36e28;
     -webkit-transition: all 0.3s ease 0s;
        -moz-transition: all 0.3s ease 0s;
         -ms-transition: all 0.3s ease 0s;
@@ -545,7 +546,9 @@ ul.flat-infomation li i {
 .header {	
     background-color: rgba(255, 255, 255, 0.9);
     border-bottom: 1px solid #f1f1f1;
-    box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
+    -webkit-box-shadow: 0 8px 6px -6px #999;
+    -moz-box-shadow: 0 8px 6px -6px #999;
+    box-shadow: 0 8px 6px -6px #999;
 }
 
 .header .logo {		
@@ -566,12 +569,17 @@ ul.flat-infomation li i {
         -ms-transition: all 0.5s ease-in-out;
          -o-transition: all 0.5s ease-in-out;
             transition: all 0.5s ease-in-out;
+			-webkit-box-shadow: 0 8px 6px -6px #999;
+			-moz-box-shadow: 0 8px 6px -6px #999;
+			box-shadow: 0 8px 6px -6px #999;
 }
 
 .header.upscrolled {
     opacity: 1;
     top: 0;
-	box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+	-webkit-box-shadow: 0 8px 6px -6px #999;
+    -moz-box-shadow: 0 8px 6px -6px #999;
+    box-shadow: 0 8px 6px -6px #999;
 }
 
 /* Button click */
@@ -3369,7 +3377,7 @@ height: 100%;
 }
 
 form{
-	width: 90%;
+	width: 100%;
 	margin: 0 auto;
 }
 
@@ -3455,7 +3463,7 @@ form{
 }
 
 .submit-btn:hover{
-    background:blue;
+    background:rgb(31, 31, 34);
 	font-family: 'Poppins', sans-serif;
 
 }
@@ -3466,7 +3474,7 @@ form{
 }
 
 .form-container .form-row .form-group{
-	margin-right:10px;
+	margin-right:20px;
 }
 
 /* .form-container .file-select label{
@@ -4270,7 +4278,7 @@ form{
 	margin-bottom: 30px;
 	margin-top: 0;
 	padding-bottom: 5px;
-	font-size: 40px;
+	font-size: 20px;
 	font-weight: 600;
 	text-align: center;
 	text-transform: capitalize;
@@ -4281,7 +4289,7 @@ form{
 
 .welcome .subtitle{
 	text-align: center;
-	font-size:20px;
+	font-size:40px;
 	margin-bottom: 5px;
 	font-weight: 700;
 	font-family: 'Newsreader', serif;
@@ -4822,3 +4830,40 @@ section.flat-row.section-product{
 .social-none{
     display: none!important;
 }
+/* ********  Review data  ******** */
+
+.show-review-container{
+    position: relative;
+    text-align: center;
+    max-width: 400px;
+    margin: 0 auto;
+    padding: 30px 20px;
+    box-shadow: 0 2px 50px rgba(0,0,0,.1);
+}
+
+.show-review-container img{
+    width: 150px;
+}
+
+.show-review-container h1{
+    padding: 15px 0;
+    margin: 0;
+}
+
+.show-review-container h4{
+    margin: 0;
+    font-size: 18px;
+}
+
+.show-review-container .popper{
+	position: absolute;
+	 bottom: 30px;
+	 right: 30px;
+ }
+ 
+ .show-review-container .popper2{
+	position: absolute;
+	 bottom: 30px;
+	left: 30px;
+	 transform: rotatez(90deg);
+ }
