--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -2965,13 +2965,12 @@ footer a:hover {
 }
 
 .box-outlay{
+	margin: 5px;
     display: flex;
-
     align-items: center;
-    border-radius: 15px;
-    border: 1px solid #e36e28;
+    border-radius: 4px;
+    border: 2px solid #e36e28;
     padding: 20px 20px;
-    width:auto;
     transition: ease-in;
 }
 
@@ -2982,14 +2981,14 @@ footer a:hover {
 
 .box-outlay p{
     margin: 0;
-    font-family: 'Josefin Sans', sans-serif;
-    font-weight: 600;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 800;
     color: #000;
-	font-size: 15px;
+	font-size: 14px;
     
 }
 .box-outlay .dropdown-item{
-	font-family: 'Josefin Sans', sans-serif;
+	font-family: 'Poppins', sans-serif;
     font-weight: 500;
     color: #000;
 	font-size: 15px;
@@ -4432,7 +4431,7 @@ padding: 20px 20px;
   .second-menu .row{
     margin: 0 auto;
     padding: 40px 0;
-    max-width: 1000px;
+    max-width: 1100px;
 }
 
 .section-client .col-lg-3{
