--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -4435,13 +4435,16 @@ padding: 20px 20px;
 }
 
 .section-client .col-lg-3{
-    display: grid;
-    place-items: center;
+	width: 100%;
+    display: flex;
+    justify-content: center;
+	align-items: center;
 } 
 
 .stats-container{
+	width: 100%;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
 }
 
 .flat-counter .numb-count{
@@ -4470,6 +4473,40 @@ padding: 20px 20px;
 
 /* *************************  Place to Visit  ***************************** */
 
+
+.places-slider{
+	margin: 0 auto;
+  }
+  
+	
+  .places-slider .swiper-container{
+	  width: 100%;
+	  height: 400px;
+	}
+	
+	.places-slider .swiper-slide {
+	   height: 400px;
+	   /* height: 100%; */
+	   display:flex;
+	   justify-content: center;
+	   align-items: center;
+	   position: relative;
+	}
+
+	.swiper-button-next{
+		margin-right: 10px;
+		background: var(--main-color)!important;
+		width:40px!important;
+		height: 40px!important;
+		border-radius: 50%;
+		z-index: 111;
+	  }
+	  
+	  .swiper-button-next:after{
+		font-weight: 600;
+		font-size: 14px!important;
+		color: var(--title-color);
+	  }
 
 .flat-row.section-client{
 	padding: 50px 0 70px;
@@ -4524,7 +4561,6 @@ section.flat-row.section-product{
 }
 
 
-
 .section-product .text-box-inner-container:before{
 	content: '';
 	position: absolute;
@@ -4540,7 +4576,6 @@ section.flat-row.section-product{
 .section-product .text-box{
 	width: 280px;
 	height: 280px;
-	/* border: 1px solid var(--bold-color); */
 	box-sizing: border-box;
 	opacity: 0;
 	transition: .7s;
@@ -4985,3 +5020,59 @@ section.flat-row.section-product{
  }
 
  
+ /* **********************   Rating start  ************************* */
+
+
+ #star-1:checked ~ section [for=star-1] svg, #star-2:checked ~ section [for=star-1] svg, #star-2:checked ~ section [for=star-2] svg, #star-3:checked ~ section [for=star-1] svg, #star-3:checked ~ section [for=star-2] svg, #star-3:checked ~ section [for=star-3] svg, #star-4:checked ~ section [for=star-1] svg, #star-4:checked ~ section [for=star-2] svg, #star-4:checked ~ section [for=star-3] svg, #star-4:checked ~ section [for=star-4] svg, #star-5:checked ~ section [for=star-1] svg, #star-5:checked ~ section [for=star-2] svg, #star-5:checked ~ section [for=star-3] svg, #star-5:checked ~ section [for=star-4] svg, #star-5:checked ~ section [for=star-5] svg {
+	transform: scale(1);
+  }
+
+  #star-1:checked ~ section [for=star-1] svg path, #star-2:checked ~ section [for=star-1] svg path, #star-2:checked ~ section [for=star-2] svg path, #star-3:checked ~ section [for=star-1] svg path, #star-3:checked ~ section [for=star-2] svg path, #star-3:checked ~ section [for=star-3] svg path, #star-4:checked ~ section [for=star-1] svg path, #star-4:checked ~ section [for=star-2] svg path, #star-4:checked ~ section [for=star-3] svg path, #star-4:checked ~ section [for=star-4] svg path, #star-5:checked ~ section [for=star-1] svg path, #star-5:checked ~ section [for=star-2] svg path, #star-5:checked ~ section [for=star-3] svg path, #star-5:checked ~ section [for=star-4] svg path, #star-5:checked ~ section [for=star-5] svg path {
+	fill: var(--main-color);
+	stroke: var(--main-color);
+  }
+
+
+
+  
+
+
+  #star-1_1:checked ~ section [for=star-1_1] svg, #star-2_1:checked ~ section [for=star-1_1] svg, #star-2_1:checked ~ section [for=star-2_1] svg, #star-3_1:checked ~ section [for=star-1_1] svg, #star-3_1:checked ~ section [for=star-2_1] svg, #star-3_1:checked ~ section [for=star-3_1] svg, #star-4_1:checked ~ section [for=star-1_1] svg, #star-4_1:checked ~ section [for=star-2_1] svg, #star-4_1:checked ~ section [for=star-3_1] svg, #star-4_1:checked ~ section [for=star-4_1] svg, #star-5_1:checked ~ section [for=star-1_1] svg, #star-5_1:checked ~ section [for=star-2_1] svg, #star-5_1:checked ~ section [for=star-3_1] svg, #star-5_1:checked ~ section [for=star-4_1] svg, #star-5_1:checked ~ section [for=star-5_1] svg {
+	transform: scale(1);
+  }
+
+  #star-1_1:checked ~ section [for=star-1_1] svg path, #star-2_1:checked ~ section [for=star-1_1] svg path, #star-2_1:checked ~ section [for=star-2_1] svg path, #star-3_1:checked ~ section [for=star-1_1] svg path, #star-3_1:checked ~ section [for=star-2_1] svg path, #star-3_1:checked ~ section [for=star-3_1] svg path, #star-4_1:checked ~ section [for=star-1_1] svg path, #star-4_1:checked ~ section [for=star-2_1] svg path, #star-4_1:checked ~ section [for=star-3_1] svg path, #star-4_1:checked ~ section [for=star-4_1] svg path, #star-5_1:checked ~ section [for=star-1_1] svg path, #star-5_1:checked ~ section [for=star-2_1] svg path, #star-5_1:checked ~ section [for=star-3_1] svg path, #star-5_1:checked ~ section [for=star-4_1] svg path, #star-5_1:checked ~ section [for=star-5_1] svg path {
+	fill: var(--main-color);
+	stroke: var(--main-color);
+  }
+  
+  
+
+  .form-rating .star{
+	 display: none;
+  }
+  
+  .form-rating label {
+	display: inline-block;
+	width: 40px;
+	text-align: center;
+	cursor: pointer;
+  }
+  .form-rating label svg {
+	width: 30px;
+	height: 30px;
+	fill: white;
+	stroke: var(--text-color);
+	transform: scale(0.8);
+	transition: transform 200ms ease-in-out;
+  }
+  .form-rating label svg path {
+	transition: fill 200ms ease-in-out, stroke 100ms ease-in-out;
+  }
+  
+  .form-rating label[for=star-null] {
+	display: block;
+	margin: 0 auto;
+	color: #999;
+  }
+  
