--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -3148,9 +3148,9 @@ footer a:hover {
 .demo .button {
 	position:fixed;
 	position:fixed;
-	width:120px;
-	height:110px;
-	top:150px;
+	width:110px;
+	height:100px;
+	bottom:150px;
 	right:40px;
 	border: 1px transparent;
 	-webkit-border-radius: 40px;
@@ -3159,7 +3159,7 @@ footer a:hover {
 	cursor: pointer;
 	display: inline-block;
 	font-family: Arial;
-	font-size: 20px;
+	font-size: 18px;
 	padding: 8px 30px;
 	text-align: center;
 	text-decoration: none;
